Ajout d'un lien sur une page de contact

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <ul class="nav nav-pills">
                       <li><a href="#">Articles</a></li>
                       <li><a href="#">Expérimentations</a></li>
+                      <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
             </header>
