--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <header class="mainHeader">
                 <h1>Maxime AILLOUD</h1>
-                <p class="lead">L'apprentissage à mon service, et au vôtre</p>
+                <p class="lead">Attention chérie, ça va coder !!!</p>
 
                 <div class="subnav">
                     <ul class="nav nav-pills">
