--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <footer class="mainFooter">
                 <p class="pull-right"><a href="#">Back to top</a></p>
-                <p>♡2012 by Maxime AILLOUD. Copying is an act of love. Please copy.</p>
+                <p>♡2012 by Maxime AILLOUD.</p>
             </footer>
         </div>
 
