Modification du footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
             </ul>
 
             <footer class="mainFooter">
-                <p class="pull-right"><a href="#">Back to top</a></p>
+                <p class="pull-right">
+                    généré par <a href="http://www.phrozn.info/en/" title="Phrozn - Static Site Generator">Phrozn</a>
+                    | hébergé par <a href="https://www.alwaysdata.com/" title="L'h">alwaysdata</a>
+                </p>
                 <p>♡2012 by Maxime AILLOUD.</p>
             </footer>
         </div>
