Adaptation du design du footer au responsive

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 </li>
             </ul>
 
-            <footer class="mainFooter">
-                <p class="pull-right">
+            <footer class="mainFooter row">
+                <div class="span4">♡2012 by Maxime AILLOUD.</div>
+                <div class="span3 offset7">
                     généré par <a href="http://www.phrozn.info/en/" title="Phrozn - Static Site Generator">Phrozn</a>
                     | hébergé par <a href="https://www.alwaysdata.com/" title="L'h">alwaysdata</a>
-                </p>
-                <p>♡2012 by Maxime AILLOUD.</p>
+                </div>
             </footer>
         </div>
 
