--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </ul>
 
             <footer class="mainFooter row">
-                <div class="span4">♡2012 by Maxime AILLOUD.</div>
-                <div class="span3 offset7">
+                <div class="span4">♡2012 by Maxime AILLOUD</div>
+                <div class="span4 offset4">
                     généré par <a href="http://www.phrozn.info/en/" title="Phrozn - Static Site Generator">Phrozn</a>
                     | hébergé par <a href="https://www.alwaysdata.com/" title="L'h">alwaysdata</a>
                 </div>
