Suppression de balise inutile

--- a/about.html
+++ b/about.html
@@ -19,31 +19,29 @@
         <link rel="apple-touch-icon" sizes="114x114" href="media/img/apple-touch-icon-114x114.png">
     </head>
 
-    <body>
+    <body class="container">
 
-        <div class="container">
-            <header class="mainHeader">
-                <h1>Maxime AILLOUD</h1>
-                <p class="lead">Attention chérie, ça va coder !!!</p>
+        <header class="mainHeader">
+            <h1>Maxime AILLOUD</h1>
+            <p class="lead">Attention chérie, ça va coder !!!</p>
 
-                <div class="subnav">
-                    <ul class="nav nav-pills">
-                      <li><a href="index.html">Articles</a></li>
-                      <li class="active"><a href="about.html">A propos</a></li>
-                    </ul>
-                </div>
-            </header>
-            <div class="row">
-                <div class="span10">
-                    <h2>A propos de moi</h2>
-                    <p>Du texte me présentant.</p>
-                </div>
+            <div class="subnav">
+                <ul class="nav nav-pills">
+                  <li><a href="index.html">Articles</a></li>
+                  <li class="active"><a href="about.html">A propos</a></li>
+                </ul>
             </div>
-
-            <footer class="mainFooter">
-                <p>♡2012 by Maxime AILLOUD - hébergé par <a href="https://www.alwaysdata.com/" title="L'h">alwaysdata</a></p>
-            </footer>
+        </header>
+        <div class="row">
+            <div class="span10">
+                <h2>A propos de moi</h2>
+                <p>Du texte me présentant.</p>
+            </div>
         </div>
+
+        <footer class="mainFooter">
+            <p>♡2012 by Maxime AILLOUD - hébergé par <a href="https://www.alwaysdata.com/" title="L'h">alwaysdata</a></p>
+        </footer>
 
     </body>
 </html>
