--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Maxime AILLOUD</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Blog de Maxime AILLOUD">
         <meta name="author" content="Maxime AILLOUD">
 
