--- a/about.html
+++ b/about.html
@@ -8,9 +8,7 @@
         <meta name="author" content="Maxime AILLOUD">
 
         <!-- styles -->
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="/home/ABC-OBJECTIF/maxime.ailloud/Perso/workspace/maximeailloud.fr/css/about.css" rel="stylesheet">
 
         <!-- Le fav and touch icons -->
         <link rel="shortcut icon" href="img/favicon.ico">
@@ -32,12 +30,13 @@
                 </ul>
             </div>
         </header>
-                    <div class="row">
-                <div class="span10">
-                    <h2>A propos de moi</h2>
-                    <p>Du texte me présentant.</p>
-                </div>
+        
+        <div class="row">
+            <div class="span10">
+                <h2>A propos de moi</h2>
+                <p>Du texte me présentant.</p>
             </div>
+        </div>
 
         <footer class="mainFooter">
             <p class="pull-right"><a href="#">Back to top</a></p>
